--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -28,7 +28,7 @@
             </a>
           </li>
         </ul>
-        <p class="copyright text-muted">Copyright &copy; BugZilla, Devsinc 2018</p>
+        <p class="copyright text-muted">Copyright &copy; BugZilla, Devsinc2 2018</p>
       </div>
     </div>
   </div>
