--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(project) do |f| %>
+<%= form_for [@user, @project] do |f| %>
   <% if project.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
@@ -11,17 +11,17 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %>
+  <div class="field form-group">
+    <%= f.label :name, class: 'col-md-2' %>
     <%= f.text_field :name %>
   </div>
 
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_field :description %>
+  <div class="field form-group">
+    <%= f.label :description, class: 'col-md-2' %>
+    <%= f.text_area :description %>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="actions form-group">
+    <%= f.submit "Create", class: "btn btn-primary col-md-offset-3" %>
   </div>
 <% end %>
