--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,48 +12,18 @@
  *
  *= require_tree .
  *= require_self
+ *= bootstrap
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
 
-.masthead {
-  background: image-url("home-bg.jpg") !important;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 550px;
-  width: 100%;
-}
 
 .brand-logo {
   height: 53px;
 }
 
-a, a:visited, a:hover, a:active {
-  color: inherit ;
-}
-
-.navbar-default {
-  background-color: rgba(0, 0, 0, 0.0001) !important;
-  border-color: rgba(0, 0, 0, 0.0001) !important;
-}
-.navbar-default-a a {
-  color: white !important;
-}
-
-.navbar-default
-.navbar-nav > li > a {
-  color: rgba(255, 255, 255, 0.68);
-}
-.navbar-nav > li > a:hover {
-  color: white !important;
-}
-
-.navbar-default
-.navbar-brand {
-  color: #0184a0 !important;
-}
 
 .table-info {
-  background-color: #0184a0 !important;
+  background-color: #0184a069 !important;
 }
