--- a/app/views/bugs/_form.html.erb
+++ b/app/views/bugs/_form.html.erb
@@ -1,52 +1,69 @@
-<%= form_for(bug) do |f| %>
-  <% if bug.errors.any? %>
+<%= form_for [@project, @bug] do |f| %>
+  <% if @bug.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(bug.errors.count, "error") %> prohibited this bug from being saved:</h2>
+      <h2><%= pluralize(@bug.errors.count, "error") %> prohibited this bug from being saved:</h2>
 
       <ul>
-      <% bug.errors.full_messages.each do |message| %>
+      <% @bug.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+  <div class="row">
+    <div class="field form-group col-md-4">
+      <%= f.label :title %>
+      <%= f.text_field :title, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="field form-group col-md-4">
+      <%= f.label :description %>
+      <%= f.text_area :description, class: 'form-control' %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
+  <div class="row">
+    <div class="field form-group col-md-2">
+      <%= f.label :deadline %>
+      <%= f.date_field :deadline,class: 'form-control'%>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :deadline %>
-    <%= f.date_select :deadline %>
+  <div class="row">
+    <div class="field form-group col-md-4">
+      <%= f.label :bug_type %>
+      <%= f.select(:bug_type, options_for_select([['Feature', 'feature'], ['Bug', 'bug']]), {}, {class: "form-control"}) %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :type %>
-    <%= f.text_field :type %>
+  <div class="row">
+    <div class="field form-group col-md-4">
+      <%= f.label :status %>
+      <%= f.text_field :status, class: 'form-control' %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :status %>
-    <%= f.text_field :status %>
+  <div class="row">
+    <div class="field form-group col-md-4">
+      <%= f.hidden_field :user_id, value: current_user.id, class: 'form-control' %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :user_id %>
-    <%= f.text_field :user_id %>
-  </div>
-
-  <div class="field">
-    <%= f.label :project_id %>
-    <%= f.text_field :project_id %>
+  <div class="row">
+    <div class="field form-group col-md-4">
+      <%= f.hidden_field :project_id, value: @project.id, class: 'form-control' %>
+    </div>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create", class: 'btn btn-primary' %>
   </div>
 <% end %>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('.datepicker').datepicker();
+  });
+</script>
