--- a/app/views/bugs/edit.html.erb
+++ b/app/views/bugs/edit.html.erb
@@ -1,6 +1,68 @@
 <h1>Editing Bug</h1>
 
-<%= render 'form', bug: @bug %>
+  <div class="container">
+    <%= form_for [@project, @bug] do |f| %>
+    <% if @bug.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@bug.errors.count, "error") %> prohibited this bug from being saved:</h2>
 
-<%= link_to 'Show', @bug %> |
-<%= link_to 'Back', bugs_path %>
+        <ul>
+        <% @bug.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="row">
+      <div class="field form-group col-md-4">
+        <%= f.label :title %>
+        <%= f.text_field :title, class: 'form-control' %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="field form-group col-md-4">
+        <%= f.label :description %>
+        <%= f.text_area :description, class: 'form-control' %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="field form-group col-md-2">
+        <%= f.label :deadline %>
+        <%= f.date_field :deadline,class: 'form-control'%>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="field form-group col-md-4">
+        <%= f.label :bug_type %>
+        <%= f.select(:bug_type, options_for_select([['Feature', 'feature'], ['Bug', 'bug']]), {}, {class: "form-control"}) %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="field form-group col-md-4">
+        <%= f.label :status %>
+        <%= f.text_field :status, class: 'form-control' %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="field form-group col-md-4">
+        <%= f.hidden_field :user_id, value: current_user.id, class: 'form-control' %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="field form-group col-md-4">
+        <%= f.number_field :project_id, readonly: true , class: 'form-control' %>
+      </div>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "Create", class: 'btn btn-primary' %>
+    </div>
+  <% end %>
+
+</div>
