--- a/app/views/bugs/index.html.erb
+++ b/app/views/bugs/index.html.erb
@@ -1,39 +1,41 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
-<h1>Bugs</h1>
+  <h1>Bugs</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Deadline</th>
-      <th>Type</th>
-      <th>Status</th>
-      <th>User</th>
-      <th>Project</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @bugs.each do |bug| %>
+  <table class="table responsive">
+    <thead class= "table-info">
       <tr>
-        <td><%= bug.title %></td>
-        <td><%= bug.description %></td>
-        <td><%= bug.deadline %></td>
-        <td><%= bug.type %></td>
-        <td><%= bug.status %></td>
-        <td><%= bug.user %></td>
-        <td><%= bug.project %></td>
-        <td><%= link_to 'Show', bug %></td>
-        <td><%= link_to 'Edit', edit_bug_path(bug) %></td>
-        <td><%= link_to 'Destroy', bug, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Title</th>
+        <th>Description</th>
+        <th>Deadline</th>
+        <th>Type</th>
+        <th>Status</th>
+        <th>User</th>
+        <th>Project</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @bugs.each do |bug| %>
+        <tr>
+          <td><%= bug.title %></td>
+          <td><%= bug.description %></td>
+          <td><%= bug.deadline %></td>
+          <td><%= bug.bug_type %></td>
+          <td><%= bug.status %></td>
+          <td><%= bug.user.name %></td>
+          <td><%= bug.project.name %></td>
+          <td><%= link_to 'Show', bug %></td>
+          <td><%= link_to 'Edit', edit_bug_path(bug) %></td>
+          <td><%= link_to 'Destroy', bug, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Bug', new_bug_path %>
+  <br>
+
+  <%= link_to 'New Bug', new_project_bug_path(@project.id) %>
+</div>
