--- a/app/views/bugs/new.html.erb
+++ b/app/views/bugs/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Bug</h1>
+<div class="container">
+  <h1>New Bug</h1>
 
-<%= render 'form', bug: @bug %>
+  <%= render 'form', bug: @bug %>
 
-<%= link_to 'Back', bugs_path %>
+  <%= link_to 'Back', project_bugs_path(@project) %>
+</div>
