--- a/app/views/bugs/_new_form.html.erb
+++ b/app/views/bugs/_new_form.html.erb
@@ -1,4 +1,7 @@
-<%= form_for [@project, @bug] do |f| %>
+<div class="container">
+  <h1>New Bug</h1>
+
+  <%= form_for [@bug, remote: true], html: { multipart: true } do |f| %>
   <% if @bug.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@bug.errors.count, "error") %> prohibited this bug from being saved:</h2>
@@ -25,6 +28,13 @@
   </div>
 
   <div class="row">
+    <div class="field form-group col-md-3">
+      <%= f.label :avatar %>
+      <%= f.file_field :avatar, class: 'form-control' %>
+    </div>
+  </div>
+
+  <div class="row">
     <div class="field form-group col-md-2">
       <%= f.label :deadline %>
       <%= f.date_field :deadline,class: 'form-control'%>
@@ -32,19 +42,25 @@
   </div>
 
   <div class="row">
-    <div class="field form-group col-md-4">
+    <div class="field form-group col-md-2">
       <%= f.label :bug_type %>
-      <%= f.select(:bug_type, options_for_select([['Feature', 'feature'], ['Bug', 'bug']]), {}, {class: "form-control"}) %>
+      <%= f.select(:bug_type, options_for_select([['Select ', ''], ['Feature', 'feature'], ['Bug', 'bug']]), {}, {class: "form-control", id: 'bug_type'}) %>
     </div>
   </div>
 
-  <div class="row">
-    <div class="field form-group col-md-4">
+  <div class="row" id="feature_statuses">
+    <div class="field form-group col-md-2">
       <%= f.label :status %>
-      <%= f.text_field :status, class: 'form-control' %>
+      <%= f.select(:status, options_for_select([['New', 'new'], ['Started', 'started'], ['Completed', 'completed']]), {}, {class: "form-control"}) %>
     </div>
   </div>
 
+    <div class="row" id="bug_statuses">
+      <div class="field form-group col-md-2">
+        <%= f.label :status %>
+        <%= f.select(:status, options_for_select([['New', 'new'], ['Started', 'started'], ['Resolved', 'resolved']]), {}, {class: "form-control"}) %>
+      </div>
+    </div>
   <div class="row">
     <div class="field form-group col-md-4">
       <%= f.hidden_field :user_id, value: current_user.id, class: 'form-control' %>
@@ -61,9 +77,4 @@
     <%= f.submit "Create", class: 'btn btn-primary' %>
   </div>
 <% end %>
-
-<script type="text/javascript">
-  $(document).ready(function(){
-    $('.datepicker').datepicker();
-  });
-</script>
+</div>
