--- a/app/assets/stylesheets/bugs.scss
+++ b/app/assets/stylesheets/bugs.scss
@@ -2,7 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.bug-image
-{
-  width: 45px;
+.img-thumbnail {
+  width: 200px;
+}
+
+.bug-image {
+  width: 40px;
 }
