--- a/app/views/bugs/index.html.erb
+++ b/app/views/bugs/index.html.erb
@@ -13,23 +13,25 @@
         <th>Status</th>
         <th>User</th>
         <th>Project</th>
-        <th colspan="3"></th>
+        <th>Actions</th>
       </tr>
     </thead>
 
     <tbody>
       <% @bugs.each do |bug| %>
         <tr>
-          <td><%= bug.title %></td>
+          <td><%= link_to "#{bug.title}", bug %></td>
           <td><%= bug.description %></td>
           <td><%= bug.deadline %></td>
           <td><%= bug.bug_type %></td>
           <td><%= bug.status %></td>
           <td><%= bug.user.name %></td>
           <td><%= bug.project.name %></td>
-          <td><%= link_to 'Show', bug %></td>
-          <td><%= link_to 'Edit', edit_bug_path(bug) %></td>
-          <td><%= link_to 'Destroy', bug, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td>
+            <%= link_to 'View', bug %>
+            <%= link_to 'Update', edit_bug_path(bug)%>
+            <%= link_to 'Delete', bug, method: :delete, data: { confirm: 'Are you sure?' } if policy(bug).destroy? %>
+          </td>
         </tr>
       <% end %>
     </tbody>
@@ -37,5 +39,5 @@
 
   <br>
 
-  <%= link_to 'New Bug', new_project_bug_path(@project.id) %>
+  <%= link_to 'New Bug', new_project_bug_path(@project.id) if policy(Bug).new? %>
 </div>
