--- a/app/views/bugs/new.html.erb
+++ b/app/views/bugs/new.html.erb
@@ -1,7 +1,82 @@
 <div class="container">
+  <hr>
+<%= link_to 'Back', project_bugs_path(@project) %>
   <h1>New Bug</h1>
 
-  <%= render 'form', bug: @bug %>
+  <%= form_for [@project, @bug], html: { multipart: true } do |f| %>
+  <% if @bug.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@bug.errors.count, "error") %> prohibited this bug from being saved:</h2>
 
-  <%= link_to 'Back', project_bugs_path(@project) %>
+      <ul>
+      <% @bug.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="row">
+    <div class="field form-group col-md-4">
+      <%= f.label :title %>
+      <%= f.text_field :title, class: 'form-control' %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="field form-group col-md-4">
+      <%= f.label :description %>
+      <%= f.text_area :description, class: 'form-control' %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="field form-group col-md-3">
+      <%= f.label :avatar %>
+      <%= f.file_field :avatar, class: 'form-control' %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="field form-group col-md-2">
+      <%= f.label :deadline %>
+      <%= f.date_field :deadline,class: 'form-control'%>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="field form-group col-md-2">
+      <%= f.label :bug_type %>
+      <%= f.select(:bug_type, options_for_select([['Select ', ''], ['Feature', 'feature'], ['Bug', 'bug']]), {}, {class: "form-control", id: 'bug_type'}) %>
+    </div>
+  </div>
+
+  <div class="row" id="feature_statuses">
+    <div class="field form-group col-md-2">
+      <%= f.label :status %>
+      <%= f.select(:status, options_for_select([['New', 'new'], ['Started', 'started'], ['Completed', 'completed']]), {}, {class: "form-control"}) %>
+    </div>
+  </div>
+
+    <div class="row" id="bug_statuses">
+      <div class="field form-group col-md-2">
+        <%= f.label :status %>
+        <%= f.select(:status, options_for_select([['New', 'new'], ['Started', 'started'], ['Resolved', 'resolved']]), {}, {class: "form-control"}) %>
+      </div>
+    </div>
+  <div class="row">
+    <div class="field form-group col-md-4">
+      <%= f.hidden_field :user_id, value: current_user.id, class: 'form-control' %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="field form-group col-md-4">
+      <%= f.hidden_field :project_id, value: @project.id, class: 'form-control' %>
+    </div>
+  </div>
+
+  <div class="actions">
+    <%= f.submit "Create", class: 'btn btn-primary' %>
+  </div>
+<% end %>
 </div>
