--- a/app/views/bugs/show.html.erb
+++ b/app/views/bugs/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
-
+  <%= link_to 'Edit', edit_bug_path(@bug) %>
   <h3>
     <strong>Title:</strong>
     <%= @bug.title %>
@@ -27,15 +27,26 @@
   </p>
 
   <p>
-    <strong>User:</strong>
-    <%= @bug.user.name %>
+    <strong>User ID:</strong>
+    <%= @bug.user.id %>
   </p>
 
   <p>
     <strong>Project:</strong>
     <%= @bug.project.name %>
   </p>
-
-  <%= link_to 'Edit', edit_bug_path(@bug) %> |
-
+  <% if @bug.avatar.present? %>
+    <p>
+      <strong>Image:</strong>
+    </p>
+    <%= image_tag @bug.avatar_url(:thumb).to_s, class: 'img-thumbnail' %>
+  <% end %>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <h3>Know about this bug? Contribute</h3>
+      <%= link_to "Add Solution", new_project_bug_path(post_id: @bug.id, project_id: @bug.project_id) %>
+    </div>
+  </div>
 </div>
