--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -9,19 +9,25 @@
         <th>Name</th>
         <th>Description</th>
         <th>Bugs</th>
-        <th colspan="3">Ations</th>
+        <th>Actions</th>
+        <th>Users</th>
+        <th>Add User</th>
       </tr>
     </thead>
 
     <tbody>
-      <% @projects.each do |project| %>
+      <% @user.projects.each do |project| %>
         <tr>
           <td><%= project.name %></td>
           <td><%= project.description %></td>
           <td><%= link_to image_tag('bug.png', class: 'bug-image'), project_bugs_path(project) %></td>
-          <td><%= link_to 'Show', project %></td>
-          <td><%= link_to 'Edit', edit_project_path(project) %></td>
-          <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td>
+            <%= link_to 'Show', project %>
+            <%= link_to 'Edit', edit_project_path(project) if policy(project).update? %>
+            <%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } if policy(project).destroy? %>
+          </td>
+          <td> <%= link_to "", project_users_path(project.id), class: 'fa fa-users fa-lg' %> </td>
+          <td><%= link_to_if current_user.user_type == "manager", "Invite User", new_user_invitation_path(project_id: project.id) %></td>
         </tr>
       <% end %>
     </tbody>
