--- a/app/views/bugs/edit.html.erb
+++ b/app/views/bugs/edit.html.erb
@@ -43,7 +43,7 @@
     <div class="row">
       <div class="field form-group col-md-2">
         <%= f.label :bug_type %>
-        <%= f.select(:bug_type, options_for_select([['Feature', 'feature'], ['Bug', 'bug']]), {}, {class: "form-control"}) %>
+        <%= f.select(:bug_type, options_for_select([['Feature', 'feature'], ['Bug', 'bug']]), {}, {class: "form-control", id: 'bug_types'}) %>
       </div>
     </div>
 
@@ -54,29 +54,21 @@
     </div>
   </div>
 
-    <div class="row" id="bug_status">
-      <div class="field form-group col-md-2">
-        <%= f.label :status %>
-        <%= f.select(:status, options_for_select([['New', 'new'], ['Started', 'started'], ['Resolved', 'resolved']]), {}, {class: "form-control"}) %>
-      </div>
+  <div class="row" id="bug_status">
+    <div class="field form-group col-md-2">
+      <%= f.label :status %>
+      <%= f.select(:status, options_for_select([['New', 'new'], ['Started', 'started'], ['Resolved', 'resolved']]), {}, {class: "form-control"}) %>
     </div>
-
-    <div class="row">
-      <div class="field form-group col-md-4">
-        <%= f.hidden_field :user_id, value: current_user.id, class: 'form-control' %>
-      </div>
+  </div>
+  <div class="row">
+    <div class="field form-group col-md-4">
+      <%= f.hidden_field :user_id, value: current_user.id, class: 'form-control' %>
     </div>
-
-    <div class="row">
-      <div class="field form-group col-md-1">
-        <%= f.label :project_id %>
-        <%= f.number_field :project_id, readonly: true , class: 'form-control' %>
-      </div>
-    </div>
+  </div
 
     <div class="actions">
       <%= f.submit "Update Project", class: 'btn btn-primary' %>
     </div>
   <% end %>
-
 </div>
+<%= console %>
