--- a/app/views/bugs/new.html.erb
+++ b/app/views/bugs/new.html.erb
@@ -52,14 +52,14 @@
 
   <div class="row" id="feature_statuses">
     <div class="field form-group col-md-2">
-      <%= f.label :status %>
+      <%= f.label :feature_status %>
       <%= f.select(:status, options_for_select([['New', 'new'], ['Started', 'started'], ['Completed', 'completed']]), {}, {class: "form-control"}) %>
     </div>
   </div>
 
   <div class="row" id="bug_statuses">
     <div class="field form-group col-md-2">
-      <%= f.label :status %>
+      <%= f.label :bug_status %>
       <%= f.select(:status, options_for_select([['New', 'new'], ['Started', 'started'], ['Resolved', 'resolved']]), {}, {class: "form-control"}) %>
     </div>
   </div>
