--- a/app/views/bugs/new.html.erb
+++ b/app/views/bugs/new.html.erb
@@ -60,7 +60,7 @@
   <div class="row" id="bug_statuses">
     <div class="field form-group col-md-2">
       <%= f.label :bug_status %>
-      <%= f.select(:status, options_for_select([['New', 'new'], ['Started', 'started'], ['Resolved', 'resolved']]), {}, {class: "form-control"}) %>
+      <%= f.select(:status, options_for_select([['New', 'new'], ['Started', 'started'], ['Resolved', 'resolved']]), {}, {class: "form-control", id: 'bug_status_j'}) %>
     </div>
   </div>
 
