--- a/app/views/bugs/edit.html.erb
+++ b/app/views/bugs/edit.html.erb
@@ -62,7 +62,7 @@
   </div>
   <div class="row">
     <div class="field form-group col-md-4">
-      <%= f.hidden_field :user_id, value: current_user.id, class: 'form-control' %>
+      <%= f.hidden_field :user_id, value: @user.id, class: 'form-control' %>
     </div>
   </div
 
