--- a/app/views/bugs/new.html.erb
+++ b/app/views/bugs/new.html.erb
@@ -66,7 +66,7 @@
 
   <div class="row">
     <div class="field form-group col-md-4">
-      <%= f.hidden_field :user_id, value: current_user.id, class: 'form-control' %>
+      <%= f.hidden_field :user_id, value: @user.id, class: 'form-control' %>
     </div>
   </div>
 
