--- a/app/views/bugs/index.html.erb
+++ b/app/views/bugs/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
   <h1><%= @project.name %></h1>
-  <h2>Bugs</h2>
+  <h2>Backlog</h2>
 
   <table class="table responsive">
     <thead class= "table-info">
